--- a/docs/csc8102_report.tex
+++ b/docs/csc8102_report.tex
@@ -128,7 +128,7 @@
 % *** GRAPHICS RELATED PACKAGES ***
 %
 \ifCLASSINFOpdf
-  % \usepackage[pdftex]{graphicx}
+  \usepackage[pdftex]{graphicx}
   % declare the path(s) where your graphic files are
   % \graphicspath{{../pdf/}{../jpeg/}}
   % and their extensions so you won't have to specify these with
@@ -419,16 +419,6 @@
 % this is a minor point as most people would not even notice if the said evil
 % space somehow managed to creep in.
 
-
-% for Computer Society papers, we must declare the abstract and index terms
-% PRIOR to the title within the \IEEEtitleabstractindextext IEEEtran
-% command as these need to go into the title area created by \maketitle.
-% As a general rule, do not put math, special symbols or citations
-% in the abstract or keywords.
-\IEEEtitleabstractindextext{%
-}
-
-
 % make the title area
 \maketitle
 
@@ -458,7 +448,7 @@
 
 
 
-\IEEEraisesectionheading{\section{Introduction}\label{sec:introduction}}
+\IEEEraisesectionheading{\section{File Encryption and Decryption}\label{sec:encryptiondecryption}}
 % Computer Society journal (but not conference!) papers do something unusual
 % with the very first section heading (almost always called "Introduction").
 % They place it ABOVE the main text! IEEEtran.cls does not automatically do
@@ -466,8 +456,6 @@
 % \IEEEraisesectionheading{} command. Note the need to keep any \label that
 % is to refer to the section immediately after \section in the above as
 % \IEEEraisesectionheading puts \section within a raised box.
-
-
 
 
 % The very first letter is a 2 line initial drop letter followed
@@ -485,26 +473,54 @@
 % 
 % Here we have the typical use of a "T" for an initial drop letter
 % and "HIS" in caps to complete the first word.
-\IEEEPARstart{T}{his} demo file is intended to serve as a ``starter file''
-for IEEE Computer Society journal papers produced under \LaTeX\ using
-IEEEtran.cls version 1.8b and later.
-% You must have at least 2 lines in the paragraph with the drop letter
-% (should never be an issue)
-I wish you the best of success.
+\IEEEPARstart{T}{he} program for part one of this coursework allows a user to
+encrypt and decrypt their own files according to a password. These files are
+encrypted via AES-128 running in Cipher Block Chaining (CBC) mode and are
+signed with a HMAC function. Any encrypted file is comprised of the initial
+vector for the CBC operation, the resultant ciphertext, and a signature at the
+end which ensures integrity of the data and allows us to confirm that the
+password used was the correct one.
 
-\hfill mds
- 
-\hfill August 26, 2015
+The program simply defines an encrypted file as any file that ends with the
+\texttt{.8102} extention. A file which does not end with that extension is
+assumed to not be encrypted at all. In order to build this program, the user
+needs to run the two maven commands: \texttt{mvn clean install} and
+\texttt{mvn jar:jar} to create the resultant \texttt{.jar} file inside the
+\texttt{target/} folder. From there, the user can use the following commands
+to encrypt and decrypt a file respectively: \texttt{java -jar [jarfile] -e
+[filename]} and \texttt{java -jar [jarfile] -d [filename].8102}.
 
-\subsection{Subsection Heading Here}
+A better explanation of the commands and their use can be found in the
+\texttt{README.md} file packaged with the code. If the file you are trying to
+encrypt or decrypt does not exist, then the program will complain and exit
+once it detects that. The same happens if the program detects that you
+are trying to encrypt a file with the \texttt{.8102} extention, or if you are
+trying to decrypt a file without it. Once the input file has been encrypted or
+decrypted, it will be deleted and a new file with the appropriate file
+extension will be written to.
+
+The encrypted file will contain Base64 encoded text instead of direct binary
+in order to act as an ASCII Armor file and avoid writing directly to binary
+due to the problems that it can cause later down the line.
+
+\subsection{Implementation}
+
+Let us say that we wish to encrypt the file below that contains some
+confidential data using this program.
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.8\linewidth]{images/secret_information}
+	\caption{A dangerous secret}
+	\label{fig:secretinformation}
+\end{figure}
+
+
+\section{Hash Cracking}\label{sec:hashcracking}
 Subsection text here.
 
 % needed in second column of first page if using \IEEEpubid
 %\IEEEpubidadjcol
-
-\subsubsection{Subsubsection Heading Here}
-Subsubsection text here.
-
 
 % An example of a floating figure using the graphicx package.
 % Note that \label must occur AFTER (or within) \caption.
@@ -600,40 +616,6 @@ Subsubsection text here.
 % Note that, LaTeX2e, unlike IEEE journals/conferences, places
 % footnotes above bottom floats. This can be corrected via the
 % \fnbelowfloat command of the stfloats package.
-
-
-
-
-\section{Conclusion}
-The conclusion goes here.
-
-
-
-
-
-% if have a single appendix:
-%\appendix[Proof of the Zonklar Equations]
-% or
-%\appendix  % for no appendix heading
-% do not use \section anymore after \appendix, only \section*
-% is possibly needed
-
-% use appendices with more than one appendix
-% then use \section to start each appendix
-% you must declare a \section before using any
-% \subsection or using \label (\appendices by itself
-% starts a section numbered zero.)
-%
-
-
-\appendices
-\section{Proof of the First Zonklar Equation}
-Appendix one text goes here.
-
-% you can choose not to have a title for an appendix
-% if you want by leaving the argument blank
-\section{}
-Appendix two text goes here.
 
 
 % trigger a \newpage just before the given reference
